# TruthGuard

./: .env.example  .gitignore  README.md  auth.ts  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
.agents/workflows/: implement_fastapi_backend.md
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/api/feedback/: route.ts
app/community/: page.tsx
app/dashboard/: page.tsx
app/fact-check/: page.tsx
app/login/: page.tsx
app/threats/: page.tsx
backend/: .env.example  fetch_metrics.py  ingest_kb.py  main.py  monitoring.py  pyproject.toml  requirements.txt  test_backend_result.py  test_search.py  test_search_2.py
backend/data/kb/: verification_foundations.jsonl
backend/data/telemetry/: analysis_events.jsonl
backend/data/vector_store/: chroma.sqlite3  truthguard_knowledge_manifest.json
backend/ml/: cache.py  classifier.py  knowledge_base.py  security.py  video_processor.py
chrome-extension/: background.js  manifest.json  popup.html  popup.js
components/: navbar-content.tsx  navbar.tsx  truthguard-dashboard.tsx
components/providers/: notification-provider.tsx
components/truthguard/: dashboard-data.ts
components/ui/: badge.tsx
lib/: analysis-types.ts  analyzer.ts  fact-check.ts  feedback-store.ts
