[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "slowapi>=0.1.9",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
